[refactor #134] 책마다 북클럽 응답 수정